--- a/package.json
+++ b/package.json
@@ -1,17 +1,13 @@
 {
-  "name": "jquery-treetable",
-  "version": "3.2.0",
+  "name": "@priotas/jquery-treetable",
+  "version": "4.0.0",
   "description": "jQuery plugin for displaying a tree structure in a (HTML) table, i.e. a directory structure or a nested list.",
-  "main": "jquery.treetable.js",
-  "directories": {
-    "test": "test"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "main": "dist/jquery-treetable.cjs.js",
+  "module": "dist/jquery-treetable.esm.js",
+  "browser": "dist/jquery-treetable.umd.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ludo/jquery-treetable.git"
+    "url": "git+https://github.com/priotas/jquery-treetable.git"
   },
   "keywords": [
     "explorer",
@@ -24,10 +20,31 @@
   "author": "Ludo van den Boom <ludo@cubicphuse.nl>",
   "license": "(MIT OR GPL-2.0)",
   "bugs": {
-    "url": "https://github.com/ludo/jquery-treetable/issues"
+    "url": "https://github.com/priotas/jquery-treetable/issues"
   },
-  "homepage": "https://github.com/ludo/jquery-treetable#readme",
+  "homepage": "https://github.com/priotas/jquery-treetable#readme",
   "dependencies": {
-    "jquery": ">=1.6"
+    "jquery": ">=3.1"
+  },
+  "scripts": {
+    "build": "rollup -c",
+    "test": "karma start"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
+    "chai": "^4.1.2",
+    "chai-jquery": "^2.0.0",
+    "karma": "^2.0.2",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-mocha": "^1.3.0",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "lodash": "^4.17.10",
+    "mocha": "^5.1.1",
+    "rollup": "^0.58.2",
+    "rollup-plugin-babel": "^3.0.4",
+    "rollup-plugin-commonjs": "^9.1.3",
+    "rollup-plugin-node-resolve": "^3.3.0",
+    "sinon": "^5.0.7"
   }
 }
