--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
   "name": "@priotas/jquery-treetable",
-  "version": "3.2.1",
+  "version": "3.2.2",
   "description": "jQuery plugin for displaying a tree structure in a (HTML) table, i.e. a directory structure or a nested list.",
-  "main": "jquery.treetable.js",
-  "directories": {
-    "test": "test"
-  },
+  "main": "src/jquery-treetable.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
